--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,20 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+
+            maven {
+                url 'https://maven.google.com'
+                // Alternative URL is 'https://dl.google.com/dl/android/maven2/'
+            }
+
     }
 }
 
